tests/baselines/reference/isolatedModulesNoExternalModule.errors.txt
tests/cases/compiler/isolatedModulesNoExternalModule.ts(2,1): error TS1208: Cannot compile namespaces when the '--isolatedModules' flag is provided.


==== tests/cases/compiler/isolatedModulesNoExternalModule.ts (1 errors) ====
    
    var x;
    ~~~
!!! error TS1208: Cannot compile namespaces when the '--isolatedModules' flag is provided.